// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSegment snapshots with children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
  border-bottom: 1px solid #dfdfe3;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 30px 30px 30px 30px;
}

.c0:hover {
  cursor: inherit;
}

.c0:first-child {
  border-radius: 3px 3px 0 0;
}

.c0:last-child {
  border-bottom: 0;
  border-radius: 0 0 3px 3px;
}

<CardSegment>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CardSegment-sc-44tqm2-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:flex;flex:1 0 auto;position:relative;",
            [Function],
            " &:first-child{border-radius:3px 3px 0 0;}&:last-child{border-bottom:0;border-radius:0 0 3px 3px;}",
          ],
        },
        "displayName": "CardSegment",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CardSegment-sc-44tqm2-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    >
      <div>
        child 1
      </div>
      <div>
        child 2
      </div>
    </div>
  </StyledComponent>
</CardSegment>
`;

exports[`CardSegment snapshots without children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  position: relative;
  border-bottom: 1px solid #dfdfe3;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 30px 30px 30px 30px;
}

.c0:hover {
  cursor: inherit;
}

.c0:first-child {
  border-radius: 3px 3px 0 0;
}

.c0:last-child {
  border-bottom: 0;
  border-radius: 0 0 3px 3px;
}

<CardSegment>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "CardSegment-sc-44tqm2-0",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "display:flex;flex:1 0 auto;position:relative;",
            [Function],
            " &:first-child{border-radius:3px 3px 0 0;}&:last-child{border-bottom:0;border-radius:0 0 3px 3px;}",
          ],
        },
        "displayName": "CardSegment",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "CardSegment-sc-44tqm2-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</CardSegment>
`;
